syntax = "proto3";

option java_package = "so.sao.test.protobuf";


enum PhoneType {

	HOME = 0;
	WORK = 1;
	OTHOR = 2;

}

message ProtobufUser {

	int32 id = 1;
	string name = 2;
	message Phone{
	
	PhoneType phoneType = 1;
	string phoneNumber = 2;
	
	}
	repeated Phone phones = 3;
	
}

message AddPhoneToUserRequest{

	int32 uid = 1;
	PhoneType phoneType = 2;
	string phoneNumber = 3;
	
}

message AddPhoneToUserResponse{

	bool result = 1;

}

service PhoneService {

	rpc addPhoneToUser(AddPhoneToUserRequest) returns (AddPhoneToUserResponse);

}